cluster/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-backend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-backend
  template:
    metadata:
      labels:
        app: my-backend
    spec:
      containers:
        - name: my-backend
          image: nggocnn/backend:v1
          resources:
            requests:
              memory: '256Mi'
              cpu: '500m'
            limits:
              memory: '512Mi'
              cpu: '1G'
          ports:
            - containerPort: 5000
