cluster/database-deployment.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-database
  labels:
    name: my-database
spec:
  containers:
    - name: my-database
      image: nggocnn/database:v1
      resources:
        requests:
          memory: '128Mi'
          cpu: '250m'
        limits:
          memory: '256Mi'
          cpu: '500m'
      ports:
        - containerPort: 3306
