cluster/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-frontend
  template:
    metadata:
      labels:
        app: my-frontend
    spec:
      containers:
        - name: my-frontend
          image: nggocnn/frontend:v1
          resources:
            requests:
              memory: '128Mi'
              cpu: '250m'
            limits:
              memory: '256Mi'
              cpu: '500m'
          ports:
            - containerPort: 80
