cluster/test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-app
  labels:
    name: test-app
spec:
  containers:
    - name: test-app
      image: nginx
      resources:
        requests:
          memory: '128Mi'
          cpu: '250m'
        limits:
          memory: '256Mi'
          cpu: '500m'
