cluster/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-backend-cluster-ip
spec:
  selector:
    app: my-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
