cluster/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-database-cluster-ip
spec:
  selector:
    name: my-database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
