cluster/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-frontend-load-balancer
spec:
  selector:
    app: my-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
