cluster/nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app
  namespace: default
spec:
  selector:
    app: nginx-app
  ports:
    - name: http
      targetPort: 80
      port: 80
