cluster/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: contact.ngocnn.online
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: frontend-cluster-ip
                port:
                  number: 80
            path: /
    - host: contact.ngocnn.online
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: backend-cluster-ip
                port:
                  number: 5000
            path: /api
